# DemoOfProductsExample

./: .gitignore
FurnitureHelper-2024-02-01-test-with-unit-tests/: README.md
FurnitureHelper-2024-02-01-test-with-unit-tests/authentication_lambda/: Makefile  README.md  lambda_function.py  pyproject.toml
FurnitureHelper-2024-02-01-test-with-unit-tests/authentication_lambda/src/: constants.py  settings.py  tracing.py  utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/authentication_lambda/tests/: test_utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/bundle_lambda/: .gitignore  README.md  integration_test.py  lambda_function.py  pyproject.toml
FurnitureHelper-2024-02-01-test-with-unit-tests/bundle_lambda/src/: bundle.py  constants.py  lambda_function.py  search.py  tracing.py  utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/bundle_lambda/tests/: test_bundle.py  test_metrics.py  test_search.py  test_utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/cart_lambda/: README.md  lambda_function.py  pyproject.toml
FurnitureHelper-2024-02-01-test-with-unit-tests/cart_lambda/src/: cart.py  constants.py  errors.py  lambda_function.py  settings.py  utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/cart_lambda/tests/: test_cart.py  test_lambda_function.py  test_utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/change_lambda/: README.md  build_layer.sh  lambda_function.py  pyproject.toml
FurnitureHelper-2024-02-01-test-with-unit-tests/change_lambda/src/: constants.py  lambda_function.py  settings.py  utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/change_lambda/tests/: test_utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/infra/: cdk.json  package-lock.json  package.json
FurnitureHelper-2024-02-01-test-with-unit-tests/infra/lib/: infra-stack.ts  lambda-authentication_lambda.ts  lambda-preference_lambda.ts
FurnitureHelper-2024-02-01-test-with-unit-tests/infra/test/: new_infra.test.ts
FurnitureHelper-2024-02-01-test-with-unit-tests/preference_lambda/: README.md  build_layer.sh  conftest.py  integration_test.py  lambda_function.py  pyproject.toml
FurnitureHelper-2024-02-01-test-with-unit-tests/preference_lambda/src/: constants.py  errors.py  metrics.py  settings.py  utils.py
FurnitureHelper-2024-02-01-test-with-unit-tests/preference_lambda/tests/: conftest.py  test_utils.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/: README.md
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/: README.md  build_layer.sh  pyproject.toml
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/common/: locallogging.py  utils.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/modules/: behavior_service.py  cognito_service.py  dynamodb_service.py  secrets_manager_service.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/package/: README.md  lambda_ai_model_interaction_handler.py  lambda_authentication_handler.py  lambda_prompt_management_handler.py  lambda_prompt_testing_handler.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/package/common/: errors.py  locallogging.py  metrics.py  settings.py  utils.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/package/modules/: __init__.py  behavior_service.py  cognito_service.py  secrets_manager_service.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/backend/package/tests/: test_metrics.py  test_utils.py
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/frontend/: package-lock.json  package.json
Lamoom-FlowPromptTester-2024-03-23-reacrhitectured-testing-with-integration-tests/infra/: package-lock.json
(+30 files in other folders)
