[tool.poetry]
name = "change_lambda"
version = "0.1.0"
description = "Processes user requests to change items in the bundle, identifies suitable replacements, and updates the bundle in DynamoDB."
authors = ["Kate Yanchenko <kate@lamoom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
boto3 = "^1.33.11"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.29.6"
botocore = "^1.32.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
