[tool.poetry]
name = "LamoomFlowPromptTesternew"
version = "0.1.0"
description = ""
authors = ["Kate Yanchenko <kate@lamoom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
botocore = "^1.32.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
boto3 = "^1.33.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
